2014-06-13  Mark Wielaard  <mjw@redhat.com>

	* backtrace.c (callback_verify): Accept "__libc_do_syscall" as first
	frame symname.

2014-06-13  Mark Wielaard  <mjw@redhat.com>

	* backtrace-subr.sh (check_native_unsupported): New function.
	(check_native): Call it.
	(check_native_core): Likewise.
	* run-backtrace-dwarf.sh: Likewise.

2014-06-11  Mark Wielaard  <mjw@redhat.com>

	* backtrace.c (main): Check that Dwfl was attached by calling
	dwfl_pid and printing the error when it is not.

2014-05-18  Mark Wielaard  <mjw@redhat.com>

	* testfile-backtrace-demangle.cc (cxxfunc): Make non-static.
	(f): Likewise.
	* testfile-backtrace-demangle.bz2: Regenerate.
	* testfile-backtrace-demangle.core.bz2: Likewise.

2014-05-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (TESTS): run-readelf-dwz-multi.sh and
	run-allfcts-multi.sh are now added unconditionally.

2014-05-01  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-dwz-multi.sh: Add tests with alt debug files in .dwz
	subdir.

2014-04-30  Mark Wielaard  <mjw@redhat.com>

	* buildid.c, buildid.sh, testfile42_noshdrs.bz2: New files.
	* Makefile.am (check_PROGRAMS): Add buildid.
	(TESTS): Add run-buildid.sh.
	(EXTRA_DISTS): Add run-buildid.sh and testfile42_noshdrs.bz2.
	(buildid_LDADD): New variable.

2014-04-24  Florian Weimer  <fweimer@redhat.com>

	* allfcts.c (setup_alt): New function.
	(main): Call it.  Implementation additional error checking and
	reporting.

2014-04-24  Florian Weimer  <fweimer@redhat.com>

	* debugaltlink.c, run-debugaltlink.sh: New files.
	* Makefile.am (check_PROGRAMS): Add debugaltlink.
	(TESTS): Add run-debugaltlink.sh.
	(debugaltlink_LDADD): New variable.

2014-04-11  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (AM_CPPFLAGS): Add -I libdwelf.
	(check_PROGRAMS): Add debuglink.
	(TESTS): Add run-debuglink.sh
	(EXTRA_DIST): Likewise.
	(debuglink_LDADD): New.
	* debuglink.c: New file.
	* run-debuglink.sh: Likewise.

2014-03-23  Mark Wielaard  <mjw@redhat.com>
