@@ -1,3 +1,7 @@
+2014-06-15  Mark Wielaard  <mjw@redhat.com>
+
+	* backtrace.c (frame_callback): Error on seeing more than 16 frames.
+
 2014-06-13  Mark Wielaard  <mjw@redhat.com>
 
 	* backtrace.c (callback_verify): Accept "__libc_do_syscall" as first
